Refactor button class for mobile menu and clean up unused div in analysis section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
           <div class="actions reveal reveal-right" data-anim-delay="180ms">
             <a class="btn btn-outline nav-cta" href="https://wa.me/5531995563539" target="_blank" rel="noopener">Agendar sessão</a>
-            <button class="btn btn-outline menu-btn" id="menuToggle" aria-expanded="false" aria-controls="menuMobile" aria-label="Abrir menu">☰</button>
+            <button class="btn menu-btn" id="menuToggle" aria-expanded="false" aria-controls="menuMobile" aria-label="Abrir menu">☰</button>
           </div>
         </nav>
         <nav id="menuMobile" class="mobile-menu" aria-label="Menu mobile" hidden>
@@ -125,9 +125,7 @@
 
       <section class="section section-analise">
   <div class="container grid grid-2">
-    <div class="analise-img reveal reveal-left">
-      
-    </div>
+   
 
     <div class="analise-text reveal reveal-right">
       <h2>O que pode acontecer quando você se escuta de verdade</h2>
