Refactor footer structure to remove unnecessary reveal animations

--- a/index.html
+++ b/index.html
@@ -268,14 +268,14 @@
 
     <footer class="section" aria-label="Rodapé">
       <div class="container footer-grid">
-        <div class="reveal reveal-up" data-anim-delay="0ms">
+        <div>
           <div class="brand" style="margin-bottom:10px;">
             <span class="brand-badge font-name"></span><span>Everton Dutra Psicanalista</span>
           </div>
           <p class="muted">© <span id="y"></span> Todos os direitos reservados Everton Dutra.</p>
         </div>
-        <div class="reveal reveal-up" data-anim-delay="80ms"><h3>Atendimento</h3><p class="muted">Online • Agende seu horário</p></div>
-        <div class="reveal reveal-up" data-anim-delay="160ms"><h3>Políticas</h3><p class="muted">Privacidade • Termos de uso</p></div>
+        <div><h3>Atendimento</h3><p class="muted">Online • Agende seu horário</p></div>
+        <div><h3>Políticas</h3><p class="muted">Privacidade • Termos de uso</p></div>
       </div>
     </footer>
 
