Update section description for 'beneficios' to enhance clarity and engagement

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <section class="section" id="beneficios">
         <div class="container">
           <div class="section-title"><h2 class="reveal reveal-up">Minha abordagem</h2></div>
-          <p class="section-sub reveal reveal-up" data-anim-delay="100ms">Um espaço seguro para falar livremente, com escuta qualificada, ética e sem julgamentos.</p>
+          <p class="section-sub reveal reveal-up" data-anim-delay="100ms">Acompanho os movimentos internos que atravessam pensamentos, emoções e relações, revelando padrões e possibilidades de percepção, sempre no ritmo singular de cada pessoa.</p>
           <div class="grid grid-3">
             <article class="card feature reveal reveal-up" data-anim-delay="0ms">
               <div class="feature-icon">
