--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <section class="section" id="beneficios">
         <div class="container">
           <div class="section-title"><h2 class="reveal reveal-up">Minha abordagem</h2></div>
-          <p class="section-sub reveal reveal-up" data-anim-delay="100ms">Acompanho os movimentos internos que atravessam pensamentos, emoções e relações, revelando padrões e possibilidades de percepção, sempre no ritmo singular de cada pessoa.</p>
+          <p class="section-sub reveal reveal-up" data-anim-delay="100ms">Atendo dentro da abordagem psicanalítica, com foco em escuta clínica aprofundada e manejo das formações do inconsciente. Meu trabalho tem sido majoritariamente com adultos, em atendimentos online, trabalhando demandas relacionadas a ansiedade, conflitos relacionais, questões identitárias e processos de sofrimento psíquico mais estruturais.</p>
           <div class="grid grid-3">
             <article class="card feature reveal reveal-up" data-anim-delay="0ms">
               <div class="feature-icon">
@@ -130,8 +130,7 @@
     <div class="analise-text reveal reveal-right">
       <h2>O que pode acontecer quando você se escuta de verdade</h2>
       <p>
-        A análise é um convite a se escutar de verdade. É o espaço onde o que pesa encontra lugar para ser dito — e o que se repete pode, aos poucos, ganhar novos sentidos.
-É um tempo dedicado a olhar para si com mais delicadeza, sem julgamentos e sem pressa, permitindo que o novo surja no seu próprio ritmo.
+       Escutar-se de verdade implica aceitar a complexidade da própria história, reconhecer limites, contradições e desejos. A análise não promete soluções, mas oferece algo mais duradouro: a possibilidade de uma relação mais honesta consigo mesmo. Nesse processo, o novo não é imposto — ele surge, lentamente, quando encontra condições para existir.
       </p>
       <blockquote>
        “Cada história tem sua voz, seu tempo e sua maneira de se revelar.
@@ -202,7 +201,8 @@
                 <button class="faq-q" aria-expanded="false" aria-controls="faq1" id="faq1-btn">O que é a Psicanálise?</button>
               </h3>
               <div class="faq-a reveal reveal-up" id="faq1" role="region" aria-labelledby="faq1-btn" hidden tabindex="-1">
-                <p>É um processo de escuta profunda que busca o que está por trás de sintomas, silêncios e repetições. Mais que tratar um sofrimento, é um caminho de autoconhecimento e transformação.</p>
+                <p>A psicanálise é um processo de escuta e autoconhecimento que ajuda você a compreender emoções, conflitos internos e padrões que se repetem na vida. Criada por Sigmund Freud, ela parte da ideia de que nem tudo o que nos afeta está consciente — e que dar sentido a isso pode aliviar o sofrimento e ampliar escolhas.
+</p>
               </div>
             </article>
             <article class="card faq-item reveal reveal-left">
@@ -210,7 +210,7 @@
                 <button class="faq-q" aria-expanded="false" aria-controls="faq2" id="faq2-btn">Como funciona uma sessão de Psicanálise?</button>
               </h3>
               <div class="faq-a reveal reveal-up" id="faq2" role="region" aria-labelledby="faq2-btn" hidden tabindex="-1">
-                <p>As sessões acontecem pela fala livre. O psicanalista escuta atentamente e devolve, em palavras, o que emerge — ajudando o paciente a dar novos sentidos às experiências.</p>
+                <p>A sessão acontece por meio da fala, no seu tempo. Você pode falar sobre o que quiser — situações do dia a dia, sentimentos, dúvidas ou até silêncios. O analista escuta e intervém de forma pontual, ajudando a ampliar a compreensão do que está sendo vivido. Como dizia Lacan, é pela palavra que o sujeito se revela.</p>
               </div>
             </article>
             <article class="card faq-item reveal reveal-left">
@@ -218,7 +218,7 @@
                 <button class="faq-q" aria-expanded="false" aria-controls="faq3" id="faq3-btn">Posso fazer Psicanálise online?</button>
               </h3>
               <div class="faq-a reveal reveal-up" id="faq3" role="region" aria-labelledby="faq3-btn" hidden tabindex="-1">
-                <p>Sim. O atendimento online é eficaz quando o ambiente preserva privacidade e silêncio.</p>
+                <p>Sim. A psicanálise online é uma modalidade consolidada e eficaz. O vínculo, a escuta e o trabalho clínico se mantêm, oferecendo mais praticidade, conforto e privacidade, sem perder a profundidade do processo analítico.</p>
               </div>
             </article>
             <article class="card faq-item reveal reveal-left">
@@ -226,7 +226,7 @@
                 <button class="faq-q" aria-expanded="false" aria-controls="faq4" id="faq4-btn">A Psicanálise serve apenas para quem está em sofrimento?</button>
               </h3>
               <div class="faq-a reveal reveal-up" id="faq4" role="region" aria-labelledby="faq4-btn" hidden tabindex="-1">
-                <p>Não. Também é indicada para quem deseja compreender desejos, escolhas, padrões, afetos e a própria história.</p>
+                <p>Não. Muitas pessoas procuram a psicanálise para se conhecer melhor, compreender relações, escolhas e momentos de transição. Às vezes, não é o sofrimento intenso que leva à análise, mas a sensação de que algo precisa ser cuidado.</p>
               </div>
             </article>
             <article class="card faq-item reveal reveal-left">
@@ -234,7 +234,8 @@
                 <button class="faq-q" aria-expanded="false" aria-controls="faq5" id="faq5-btn">O que acontece se eu não souber o que dizer na sessão?</button>
               </h3>
               <div class="faq-a reveal reveal-up" id="faq5" role="region" aria-labelledby="faq5-btn" hidden tabindex="-1">
-                <p>Está tudo bem. O silêncio também fala. Muitas vezes o “não saber” é o início de uma escuta verdadeira.</p>
+                <p>Isso é absolutamente comum. Não saber o que dizer, ficar em silêncio ou sentir confusão também fazem parte do processo. Para a psicanálise, isso já é material de trabalho e será acolhido sem julgamentos.
+</p>
               </div>
             </article>
             <article class="card faq-item reveal reveal-left">
@@ -242,7 +243,7 @@
                 <button class="faq-q" aria-expanded="false" aria-controls="faq6" id="faq6-btn">A Psicanálise me ajudará a tomar decisões?</button>
               </h3>
               <div class="faq-a reveal reveal-up" id="faq6" role="region" aria-labelledby="faq6-btn" hidden tabindex="-1">
-                <p>A análise não dá respostas prontas; amplia a consciência do que está em jogo, favorecendo escolhas mais claras e autônomas.</p>
+                <p>A psicanálise não oferece respostas prontas nem conselhos. Ela ajuda você a compreender os motivos inconscientes por trás das suas dúvidas e escolhas. Com mais clareza sobre si, as decisões tendem a se tornar mais conscientes e responsáveis.</p>
               </div>
             </article>
             <article class="card faq-item reveal reveal-left">
@@ -250,7 +251,7 @@
                 <button class="faq-q" aria-expanded="false" aria-controls="faq7" id="faq7-btn">Como saber se a Psicanálise é para mim?</button>
               </h3>
               <div class="faq-a reveal reveal-up" id="faq7" role="region" aria-labelledby="faq7-btn" hidden tabindex="-1">
-                <p>Se há desejo de falar de si, compreender o que sente e o que se repete, a Psicanálise pode ser o seu espaço.</p>
+                <p>Se você se percebe repetindo situações, questionando suas relações ou sentindo um incômodo difícil de nomear, a psicanálise pode ser um caminho. O desejo de se entender melhor já é um sinal importante.</p>
               </div>
             </article>
             <article class="card faq-item reveal reveal-left">
@@ -258,7 +259,7 @@
                 <button class="faq-q" aria-expanded="false" aria-controls="faq8" id="faq8-btn">Qual é a diferença entre Psicanálise e Psicologia?</button>
               </h3>
               <div class="faq-a reveal reveal-up" id="faq8" role="region" aria-labelledby="faq8-btn" hidden tabindex="-1">
-                <p>Ambas escutam, mas a Psicanálise se volta ao inconsciente — ao que escapa e se repete — buscando compreender em profundidade o que move o sujeito.</p>
+                <p>Ambas escutam, mas a Psicanálise se volta ao inconsciente — ao que escapa e se repete — buscando compreender em profundidade o que move o sujeito. A psicologia reúne diversas abordagens terapêuticas. A psicanálise é uma delas, com foco no inconsciente, na história subjetiva e na singularidade de cada pessoa. Autores como Freud, Lacan e Winnicott sustentam uma clínica que não busca corrigir o indivíduo, mas compreendê-lo em profundidade</p>
               </div>
             </article>
           </div>
